// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EllipsisText /> should match the snapshot 1`] = `
.c1 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c2 {
  position: relative;
  overflow: hidden;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #2F3850;
}

<div>
  <div
    class="c0"
  >
    <p
      class="c1 c2"
    />
  </div>
</div>
`;

exports[`<EllipsisText /> should match the snapshot 2`] = `
.c1 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: #2F3850;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c2 {
  position: relative;
  overflow: hidden;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #2F3850;
}

<div>
  <div
    class="c0"
  >
    <p
      class="c1 c2"
    >
      Test
    </p>
  </div>
</div>
`;
